{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 730,
  "lineage": "6487aa6b-8025-403a-6c92-1efd81069e97",
  "resources": [
    {
      "module": "module.ValheimServerAws",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:internet-gateway/igw-0a8ed97ef1f28843f",
            "id": "igw-0a8ed97ef1f28843f",
            "owner_id": "650687157167",
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "dependencies": [
            "module.ValheimServerAws.aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ValheimServerAws",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:network-acl/acl-0d7bf63478898999d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 40,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 20,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 35,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 30,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 10,
                "to_port": 80
              }
            ],
            "id": "acl-0d7bf63478898999d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 30,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 2456,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 10,
                "to_port": 2458
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 2456,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 15,
                "to_port": 2458
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 45,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 40,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 20,
                "to_port": 80
              }
            ],
            "owner_id": "650687157167",
            "subnet_ids": [
              "subnet-05922c79088702567"
            ],
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_subnet.Subnet",
            "module.ValheimServerAws.aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ValheimServerAws",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:route-table/rtb-073b29d561f1b5cf2",
            "id": "rtb-073b29d561f1b5cf2",
            "owner_id": "650687157167",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8ed97ef1f28843f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_internet_gateway.Internet",
            "module.ValheimServerAws.aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ValheimServerAws",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SubnetRouting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab68a45cc15d4fe8",
            "route_table_id": "rtb-073b29d561f1b5cf2",
            "subnet_id": "subnet-05922c79088702567"
          },
          "dependencies": [
            "module.ValheimServerAws.aws_internet_gateway.Internet",
            "module.ValheimServerAws.aws_route_table.Routing",
            "module.ValheimServerAws.aws_subnet.Subnet",
            "module.ValheimServerAws.aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ValheimServerAws",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:security-group/sg-08dbcfec8b66c061e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tcp traffic from Anywhere to Cluster",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tcp traffic from Anywhere to Cluster",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tcp traffic from Anywhere to Cluster",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "udp traffic from Anywhere to Cluster",
                "from_port": 2456,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 2458
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "udp traffic from Anywhere to Cluster",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "id": "sg-08dbcfec8b66c061e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tcp traffic from Cluster to Anywhere",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tcp traffic from Cluster to Anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tcp traffic from Cluster to Anywhere",
                "from_port": 9002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "udp traffic from Cluster to Anywhere",
                "from_port": 2456,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 2458
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "udp traffic from Cluster to Anywhere",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "118.92.5.174/32"
                ],
                "description": "tcp traffic from Cluster to AdminBox",
                "from_port": 9001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9001
              }
            ],
            "name": "cluster",
            "name_prefix": "",
            "owner_id": "650687157167",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ValheimServerAws",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:subnet/subnet-05922c79088702567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05922c79088702567",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "650687157167",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "dependencies": [
            "module.ValheimServerAws.aws_vpc.Vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ValheimServerAws",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:vpc/vpc-04c3dbe536984e9ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0f46187d08d19b512",
            "default_route_table_id": "rtb-0432e56aa0586f459",
            "default_security_group_id": "sg-03108ba39bdf06599",
            "dhcp_options_id": "dopt-6124da09",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04c3dbe536984e9ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0432e56aa0586f459",
            "owner_id": "650687157167",
            "tags": {
              "Cost": "Free"
            },
            "tags_all": {
              "Application": "Valheim",
              "Cost": "Free"
            }
          }
        }
      ]
    },
    {
      "module": "module.ValheimServerAws.module.NetworkSecurity",
      "mode": "data",
      "type": "aws_security_group",
      "name": "Groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Cluster",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:650687157167:security-group/sg-08dbcfec8b66c061e",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-08dbcfec8b66c061e",
            "name": "cluster",
            "tags": {
              "Application": "Valheim",
              "Cost": "Free"
            },
            "timeouts": null,
            "vpc_id": "vpc-04c3dbe536984e9ab"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.ValheimServerAws.module.NetworkSecurity",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "CidrEgress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ClusterAnywhereDnsTcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tcp traffic from Anywhere to Cluster",
            "from_port": 53,
            "id": "sgrule-85433574",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_security_group.Cluster",
            "module.ValheimServerAws.aws_vpc.Vpc",
            "module.ValheimServerAws.data.http.ExternalIp",
            "module.ValheimServerAws.module.NetworkSecurity.data.aws_security_group.Groups"
          ]
        },
        {
          "index_key": "ClusterAnywhereDnsUdp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "udp traffic from Anywhere to Cluster",
            "from_port": 53,
            "id": "sgrule-2072623595",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_security_group.Cluster",
            "module.ValheimServerAws.aws_vpc.Vpc",
            "module.ValheimServerAws.data.http.ExternalIp",
            "module.ValheimServerAws.module.NetworkSecurity.data.aws_security_group.Groups"
          ]
        },
        {
          "index_key": "ClusterAnywhereHttp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tcp traffic from Anywhere to Cluster",
            "from_port": 80,
            "id": "sgrule-1992567147",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_security_group.Cluster",
            "module.ValheimServerAws.aws_vpc.Vpc",
            "module.ValheimServerAws.data.http.ExternalIp",
            "module.ValheimServerAws.module.NetworkSecurity.data.aws_security_group.Groups"
          ]
        },
        {
          "index_key": "ClusterAnywhereHttps",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tcp traffic from Anywhere to Cluster",
            "from_port": 443,
            "id": "sgrule-1037945849",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_security_group.Cluster",
            "module.ValheimServerAws.aws_vpc.Vpc",
            "module.ValheimServerAws.data.http.ExternalIp",
            "module.ValheimServerAws.module.NetworkSecurity.data.aws_security_group.Groups"
          ]
        },
        {
          "index_key": "ClusterAnywhereValheim",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "udp traffic from Anywhere to Cluster",
            "from_port": 2456,
            "id": "sgrule-1510889519",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2458,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_security_group.Cluster",
            "module.ValheimServerAws.aws_vpc.Vpc",
            "module.ValheimServerAws.data.http.ExternalIp",
            "module.ValheimServerAws.module.NetworkSecurity.data.aws_security_group.Groups"
          ]
        }
      ]
    },
    {
      "module": "module.ValheimServerAws.module.NetworkSecurity",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "CidrIngress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "AdminBoxClusterSuper",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "118.92.5.174/32"
            ],
            "description": "tcp traffic from Cluster to AdminBox",
            "from_port": 9001,
            "id": "sgrule-4064057252",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_security_group.Cluster",
            "module.ValheimServerAws.aws_vpc.Vpc",
            "module.ValheimServerAws.data.http.ExternalIp",
            "module.ValheimServerAws.module.NetworkSecurity.data.aws_security_group.Groups"
          ]
        },
        {
          "index_key": "AnywhereClusterDdns",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tcp traffic from Cluster to Anywhere",
            "from_port": 9002,
            "id": "sgrule-3537708872",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9002,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_security_group.Cluster",
            "module.ValheimServerAws.aws_vpc.Vpc",
            "module.ValheimServerAws.data.http.ExternalIp",
            "module.ValheimServerAws.module.NetworkSecurity.data.aws_security_group.Groups"
          ]
        },
        {
          "index_key": "AnywhereClusterDnsTcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tcp traffic from Cluster to Anywhere",
            "from_port": 53,
            "id": "sgrule-3413013381",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_security_group.Cluster",
            "module.ValheimServerAws.aws_vpc.Vpc",
            "module.ValheimServerAws.data.http.ExternalIp",
            "module.ValheimServerAws.module.NetworkSecurity.data.aws_security_group.Groups"
          ]
        },
        {
          "index_key": "AnywhereClusterDnsUdp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "udp traffic from Cluster to Anywhere",
            "from_port": 53,
            "id": "sgrule-3047264541",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_security_group.Cluster",
            "module.ValheimServerAws.aws_vpc.Vpc",
            "module.ValheimServerAws.data.http.ExternalIp",
            "module.ValheimServerAws.module.NetworkSecurity.data.aws_security_group.Groups"
          ]
        },
        {
          "index_key": "AnywhereClusterHttp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tcp traffic from Cluster to Anywhere",
            "from_port": 80,
            "id": "sgrule-1477730221",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_security_group.Cluster",
            "module.ValheimServerAws.aws_vpc.Vpc",
            "module.ValheimServerAws.data.http.ExternalIp",
            "module.ValheimServerAws.module.NetworkSecurity.data.aws_security_group.Groups"
          ]
        },
        {
          "index_key": "AnywhereClusterValheim",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "udp traffic from Cluster to Anywhere",
            "from_port": 2456,
            "id": "sgrule-696848469",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-08dbcfec8b66c061e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2458,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ValheimServerAws.aws_security_group.Cluster",
            "module.ValheimServerAws.aws_vpc.Vpc",
            "module.ValheimServerAws.data.http.ExternalIp",
            "module.ValheimServerAws.module.NetworkSecurity.data.aws_security_group.Groups"
          ]
        }
      ]
    }
  ]
}